[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/npc_actor_sprites/herrko/TARRAK NPC BACK.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/npc_actor_sprites/herrko/TARRAK NPC FRONT.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/dialogue box test.PNG" type="Texture" id=3]
[ext_resource path="res://assets/font_test.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/npc_actors/herrk npc/Tarrak NPC.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 2048, 1472 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "MAINSTATE",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 399.5, 21.25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 60, 212.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 370.5, 28 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.5, 104 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 237.5, 324.5 )

[node name="Tarrak NPC" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 54 )
frames = SubResource( 2 )
animation = "MAINSTATE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -205.5, -170.75 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -821, -361.75 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -510.5, -546 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( 175.5, -254 )
shape = SubResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -320, -394 )
z_index = 15
texture = ExtResource( 2 )

[node name="TalktoArea" type="Area2D" parent="."]
position = Vector2( 509, -67 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalktoArea"]
position = Vector2( 150.5, 275.5 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 480.0
margin_right = 1018.0
margin_bottom = 593.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Dialogue" type="Label" parent="CanvasLayer/NinePatchRect"]
margin_left = 6.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 4 )
text = "TARRAK_NPC_TALK"

[node name="NinePatchRect2" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 452.0
margin_right = 220.0
margin_bottom = 476.0
texture = ExtResource( 3 )
region_rect = Rect2( 0.331, 0.003, 413.334, 409.998 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="Name" type="Label" parent="CanvasLayer/NinePatchRect2"]
margin_left = 6.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "LARGE_TARRAK_NPC_NAME"

[connection signal="body_entered" from="TalktoArea" to="." method="_on_TalktoArea_body_entered"]
[connection signal="body_exited" from="TalktoArea" to="." method="_on_TalktoArea_body_exited"]
